--- a/_posts/2020-09-20-ops-log.md
+++ b/_posts/2020-09-20-ops-log.md
@@ -20,21 +20,21 @@ I switched to the Baofeng UV-5R with 1/4 wave whip connected to my Pixel 2 via b
 
 On the way home, I activated some non-local repeaters and made some QSOs.
 
-* [WA7DOB - Crystal Mountain](https://www.repeaterbook.com/repeaters/details.php?state_id=53&ID=18070) from WA-123 near US-12
+* 145.41 [WA7DOB - Crystal Mountain](https://www.repeaterbook.com/repeaters/details.php?state_id=53&ID=18070) from WA-123 near US-12
   * KJ7OTM
   * WB7DOB (owner)
   * This is a linked repeater system and it wasn't clear whether I was coming into 3 sisters or Crystal.
     Further analysis shows that I was keying up the Crystal frequency, although WB7DOB was suggesting
     otherwise. Perhaps the frequencies have changed?
-* [K7KFM - Packwood](https://www.repeaterbook.com/repeaters/details.php?state_id=53&ID=5905)
+* 146.74 [K7KFL - Packwood](https://www.repeaterbook.com/repeaters/details.php?state_id=53&ID=5905)
   * Keyed up several times, heard the repeater ID
   * no contact =/
-* [WW7CH - Pardise, Mt. Rainier](https://www.repeaterbook.com/repeaters/details.php?state_id=53&ID=11180)
+* 146.78 [WW7CH - Pardise, Mt. Rainier](https://www.repeaterbook.com/repeaters/details.php?state_id=53&ID=11180)
   * KJ7OTM again (possible that repeater is linked to WB7DOB, didn't realize at the time)
-* [WA7UHD - Baw Faw Peak](https://www.repeaterbook.com/repeaters/details.php?state_id=53&ID=30)
+* 147.06 [WA7UHD - Baw Faw Peak](https://www.repeaterbook.com/repeaters/details.php?state_id=53&ID=30)
   * N1BEC - early signal report from East of Randle: could be heard, but not well
   * No contact from just west of Morton, WA
   * KJ7ITE - finally made contact east of Mayfield Dam!
-* [K7CPR - Olympia, Capitol Peak](https://www.repeaterbook.com/repeaters/details.php?state_id=53&ID=358)
+* 145.47 [K7CPR - Olympia, Capitol Peak](https://www.repeaterbook.com/repeaters/details.php?state_id=53&ID=358)
   * Heard from east of Morton
   * W7HBP gave excellent signal report, ~15mi east of I-5
