add category for ops log posts

--- a/_posts/2020-09-20-ops-log.md
+++ b/_posts/2020-09-20-ops-log.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: ops log
+category: log
+tags: aprs field
 ---
 
 Today the family took a trip up to Mt. Rainier National Park
