--- a/_posts/2020-09-27-ops-log.md
+++ b/_posts/2020-09-27-ops-log.md
@@ -8,4 +8,4 @@ category: log
 * Testing out New Condensor Mic and PTT button
   * 19:30 147.26 QSO KD7BBJ
   * 19:45 147.26 QSO AD7QA
-* 20:15 147.26 Mercury MSH Net ✅
+* 20:15 147.26 [Mercury MSH Net](http://www.w7msh.org) ✅
