update net control

--- a/_posts/2020-09-27-ops-log.md
+++ b/_posts/2020-09-27-ops-log.md
@@ -9,3 +9,4 @@ category: log
   * 19:30 147.26 QSO KD7BBJ
   * 19:45 147.26 QSO AD7QA
 * 20:15 147.26 [Mercury MSH Net](http://www.w7msh.org) ✅
+  * KC7FTS - Wally - Net Control
