add green check

--- a/_posts/2020-10-04-ops-log.md
+++ b/_posts/2020-10-04-ops-log.md
@@ -39,7 +39,7 @@ Longview, WA (74mi), and Astoria, OR (105mi)!
 * 147.06 [WA7UHD - Baw Faw Peak](https://www.repeaterbook.com/repeaters/details.php?state_id=53&ID=30)
   * 18:52 Lewis County ARES training net ✅
 * 147.26 [W7DG](https://www.repeaterbook.com/repeaters/details.php?ID=408&state_id=53)
-  * 20:15 [Mercury Mt. St. Helens](http://www.w7msh.org/about-mmsherc-net) ERC Net
+  * 20:15 [Mercury Mt. St. Helens](http://www.w7msh.org/about-mmsherc-net) ERC Net ✅
 
 Raw APRS Packets
 
