--- a/_posts/2020-10-18-ops-log.md
+++ b/_posts/2020-10-18-ops-log.md
@@ -4,16 +4,16 @@ title: ops log week of 2020-10-18
 category: log
 ---
 
-# Sun 2020-10-18
+## Sun 2020-10-18
 
 * 20:15 147.26 [Mercury Mt. St. Helens](http://www.w7msh.org/about-mmsherc-net) ERC Net ✅
 
-# Mon 2020-10-19
+## Mon 2020-10-19
 
 * 20:00 147.26 Cowlitz ACS Net ✅
 * 20:10 147.04 [Linux User Net](https://kc7nyr.com/linux/) 🐧 ✅
 
-# Fri 2020-10-23
+## Fri 2020-10-23
 
 Road trip I-5 Northbound
 
@@ -21,7 +21,7 @@ Road trip I-5 Northbound
   * QSO KC7DX - talking about US-20 Recreation Activities
   * QSO KG7VIZ
 
-# Sat 2020-10-24
+## Sat 2020-10-24
 
 Staying in Concrete, WA
 
