update for monday 10/26

--- a/_posts/2020-10-25-ops-log.md
+++ b/_posts/2020-10-25-ops-log.md
@@ -25,3 +25,11 @@ Road trip I-5 Southbound
   * 18:52 Lewis County ARES training net ✅
 
 * 20:15 W7DG 147.26 [Mercury Mt. St. Helens](http://www.w7msh.org/about-mmsherc-net) ERC Net ✅
+
+## Mon 2020-10-26
+
+* 11:00 W7DG 147.27 QSO WB7BAL
+* 13:00 PNWDigital [(Kelso/Rainier) 441.7](https://www.repeaterbook.com/repeaters/details.php?ID=505&state_id=41)
+  * WA 1 QSO WA7LGY Terry from Port Orchard, WA
+* 20:00 147.26 Cowlitz ACS Net ✅
+* 20:10 147.04 [Linux User Net](https://kc7nyr.com/linux/) 🐧 ✅
