--- a/_posts/2020-11-01-ops-log.md
+++ b/_posts/2020-11-01-ops-log.md
@@ -51,3 +51,13 @@ category: log
   * QSO KJ7PON
 * 14:33 441.7 WA 1 (3153)
   * QSO KG7OCP
+
+## Sat 2020-11-07
+
+* 10:25 441.1 WA 2 (103153)
+  * QSO AB7I
+* 10:30 441.1 OR 1 (3141)
+  * QSO N7RYT
+* 11:00 441.1 Bridge (3100)
+  * QSO KC3PYE, Greg, Western Pennsylvania
+    * Regarding TYT Firmware upgrades
