update ops logs

--- a/_posts/2020-11-08-ops-log.md
+++ b/_posts/2020-11-08-ops-log.md
@@ -55,3 +55,10 @@ Testing out some non-local DMR and Analog repeaters on the way to Silver Falls S
   * QSO KO4AKN from NC, now in Lynnwood area
   * 19:40 QSO KC7VE, new DMR user 3172607
     * D star experience, first QSO on DMR
+
+## Sat 2020-11-14
+
+* 12:15 146.52 near Ridgefield
+  * QSO KJ7IKB between Scapoose and St. Helens
+* 15:35 441.7 Rainier Hill I-5 (3168)
+  * QSO KC7BFU
