update ops log through 11/22

--- a/_posts/2020-11-15-ops-log.md
+++ b/_posts/2020-11-15-ops-log.md
@@ -9,10 +9,90 @@ category: log
 * 14:00 146.415 Simplex (top of Columbia Heights)
   * QSO W7SAK (S. Kelso)
 * 18:03 146.88 N7EI
-  * QSO AE7PT
+  * QSO AA7PT
+    * Correction thanks to AF7ZA
 * 19:02 147.26 W7DG
   * QSO KA0TP - came back for a radio check from TYT MD-UV380
 * 20:15 W7DG 147.26 [Mercury Mt. St. Helens](http://www.w7msh.org/about-mmsherc-net) ERC Net ✅
   * 21:15 147.26 QSO WA7RPM
-* 22:19 441.7 Rainer Hill OR 1 (3141)
-  * QSO KD7RQ Ryan in Medford
+* 22:19 PNWDigital [(Rainier Hill) 441.7](https://www.repeaterbook.com/repeaters/details.php?ID=505&state_id=41)
+  * OR 1 QSO KD7RQ Ryan in Medford
+
+## Mon 2020-11-16
+
+* 12:25 PNWDigital [(Rainier Hill) 441.7](https://www.repeaterbook.com/repeaters/details.php?ID=505&state_id=41)
+  * OR 1 QSO W7HDF from Olympia/Shelton
+  * 19:00 OR 1 regional DMR net (TG 3141) ✅
+* 20:00 147.26 Cowlitz ACS Net ✅
+* 20:10 146.72 [Linux User Net](https://kc7nyr.com/linux/) 🐧 ✅
+
+# Tue 2020-11-17
+
+* ~11:00 146.66 (W7BU Wickiup)
+  * QSO KI7RSB Mike for a radio check
+* 14:45 147.26 (W7DG)
+  * QSO KG7EWJ Benjamin in Lake Shore / Vancouver
+  * Group discussing digital zoom meeting Friday
+* 17:30 444.9 (W7DG)
+  * QSO KB7PMO regarding the "other repeater"
+    * 147.1 + 114
+
+# Wed 2020-11-18
+
+* 10:22 PNWDigital [(Rainier Hill) 441.7](https://www.repeaterbook.com/repeaters/details.php?ID=505&state_id=41)
+  * OR 1 QSO KJ7RME for a radio check
+  * 21:45 WA 2 N7DUD, came back for a radio check
+* 10:45 147.26 (W7DG)
+  * QSO KI7RSB regarding wiresx
+  * 10:50 QSO WA7RPM
+
+# Thur 2020-11-19
+
+* 13:15 146.66 (W7BU Wickiup)
+  * QSO KA7SGB
+* 16:18 PNWDigital [(Rainier Hill) 441.7](https://www.repeaterbook.com/repeaters/details.php?ID=505&state_id=41)
+  * QSO AA1PR asking about the happy hour net
+
+# Fri 2020-11-20
+
+* 18:30 Digital Zoom Meeting
+  * D-Star
+  * APRS / Packet station
+
+# Sat 2020-11-21
+
+* 09:13 PNWDigital [(Rainier Hill) 441.7](https://www.repeaterbook.com/repeaters/details.php?ID=505&state_id=41)
+  * WA 1 QSO WA7LGY for a radio check
+  * 11:03 PNW 2 QSO KI7RCD John, doing farm chores out in Damascus
+  * 13:40 WA 2 QSO AE7GZ, at the part with his kid
+  * 14:10 PNW 2 QSO N1TPR for a radio check for new DMR id
+* 14:56 146.66 (W7BU Wickiup)
+  * QSO KI7JWZ From Canon Beach. Good report from my HT. Will be listening more.
+* 19:40 147.26 (W7DG)
+  * QSO in the group
+    * KG7IRB
+    * KJ7GWL
+    * KI7RSB
+  * 19:50 QSO N7XH passing through from Modesto, CA to Tacoma, WA
+
+# Sun 2020-11-22
+
+* 09:00 147.26 (W7DG)
+  * QSO WA7RPM
+* 09:30 146.66 (W7BU Wickiup)
+  * QSO WA7RPM
+* 09:40 145.27 (KJ7IY Timber)
+  * QSO WA7RPM
+* 12:20 PNWDigital [(Olympia Capital Peak 440.7125](https://www.repeaterbook.com/repeaters/details.php?state_id=53&ID=15105)
+  * WA 1 QSO KC7MAW
+  * 12:25 WA 1 QSO N9VW Steve
+    * Updated PNWDigital generated repeaters file now include BC and Sultan!
+* 14:30 146.88 (N7EI)
+  * QSO AF7ZA Bill, on WA-504 and then later in Longview
+    * Regarding MSH, APRS, direwolf interest
+  * QSO N7CHS Chuck, however dropped out abruptly?
+  * QSO KD7LHB Don, on a HT
+* 16:30 147.26 (W7DG)
+  * QSO AD7QA:
+    * SOTA activation with SSTV
+    * In car logging with a code keyer!
