2021-03-14-dzcb-0-3-sprint.md: formatting

--- a/_posts/2021-03-14-dzcb-0-3-sprint.md
+++ b/_posts/2021-03-14-dzcb-0-3-sprint.md
@@ -9,17 +9,19 @@ It's been a busy, _busy_ last two weeks working on the
 are a lot of new, exciting features that should serve the amateur DMR
 community:
 
-    * Apply ordering and filtering independently of the channel definitions
-    * Apply regex name replacements independently of the channel definitions
-    * Use a custom repeaterbook channel name based on values from the Repeaterbook database entry
-    * **Support `dmrconfig` textual output**
+* Apply ordering and filtering independently of the channel definitions
+* Apply regex name replacements independently of the channel definitions
+* Use a custom repeaterbook channel name based on values from the Repeaterbook database entry
+* **Support `dmrconfig` textual output**
 
 and more!
 
-The API has stabilized enough at this point, that I'm ready to formally invite
+The API has stabilized enough at this point that I'm ready to formally invite
 interested users to help me beta test and bug squash the tool before sending it
 out to a much wider audience.
 
 If you're interested in beta testing, please see [BETA](https://github.com/mycodeplug/dzcb/blob/main/doc/BETA.md).
 
 If you're interested in how `dzcb` came to be, please see [HISTORY](https://github.com/mycodeplug/dzcb/blob/main/doc/HISTORY.md).
+
+Happy DMR'ing
